<resources>

    <string name="dialog_title_contributor_setter">Contributor Setter</string>
    <string name="dialog_title_category_setter">Category Setter</string>

    <string name="app_name">Income Expense</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>

    <string name="message_contributor_no_data">No Contributor Available.</string>
    <string name="message_account_no_data">No Account Available.</string>
    <string name="message_payment_method_no_data">No Payment Method Available.</string>
    <string name="message_category_no_data">No Category Available.</string>
    <string name="message_transaction_no_data">No Transaction Available.</string>

    <string name="label_name">Name :</string>
    <string name="label_currency">Currency :</string>
    <string name="label_contributors">Contributors :</string>
    <string name="label_group">Group :</string>
    <string name="label_categories">Categories :</string>
    <string name="label_close">Close :</string>
    <string name="label_account">Account :</string>
    <string name="label_category">Category :</string>
    <string name="label_date">Date :</string>
    <string name="label_payment_method">Payment Method :</string>
    <string name="label_amount">Amount :</string>
    <string name="label_note">Note :</string>

    <string name="hint_account_name">Enter account name</string>
    <string name="hint_contributor_name">Enter contributor name</string>
    <string name="hint_payment_method_name">Enter payment method name</string>
    <string name="hint_category_name">Enter category name</string>

    <string name="button_label_add">Add New</string>
    <string name="button_label_back">Back</string>
    <string name="button_label_delete">Delete</string>
    <string name="button_label_save">Save</string>
    <string name="button_label_ok">Ok</string>
    <string name="button_label_cancel">Cancel</string>

    <string name="log_error_adding_item">Error adding item</string>
    <string name="log_error_deleting_item">Error deleting item</string>
    <string name="log_error_updating_item">Error updating item</string>

    <string name="user_error_adding_item">Problem adding item.</string>
    <string name="user_error_deleting_item">Problem deleting item.</string>
    <string name="user_error_updating_item">Problem updating item</string>
    <string name="user_error_synch_item">Problem synchronizing item</string>

    <string name="account">Account</string>
    <string name="contributor">Contributor</string>

    <string name="log_info_adding_item">Adding %1$s.</string>
    <string name="log_info_added_item">Number of %1$s added \'%2$d\', id \'%3$d\'.</string>
    <string name="log_info_deleting_item">Deleting %1$s \'%2$d\'.</string>
    <string name="log_info_deleted_item">Number of %1$s deleted \'%2$d\', id \'%3$d\'.</string>
    <string name="log_info_updating_item">Updating %1$s \'%2$d\'.</string>
    <string name="log_info_updated_item">Number of %1$s updated \'%2$d\', id \'%3$d\'.</string>

    <string name="log_info_number_deleted_account">Number of deleted account %1$d</string>
    <string name="log_info_deleting_account">Deleting account with id \'%1$s\'</string>
    <string name="log_info_number_deleted_associated_contributor">Associated contributor deleted : %1$d</string>
    <string name="log_info_number_added_associated_contributor">Associated contributor added : %1$d"</string>
    <string name="log_info_number_deleted_associated_category">Associated category deleted : %1$d</string>
    <string name="log_info_number_added_associated_category">Associated category added : %1$d"</string>



    <string name="log_info_updating_account">Updating account with id \'%1$s\'</string>
    <string name="log_info_number_updated_account">Number of updated account %1$d</string>


    <!-- Label for the default currency preference [CHAR LIMIT=30] -->
    <string name="pref_currency_label">Default Currency</string>

    <!-- Key name for default currency preference in SharedPreferences [CHAR LIMIT=NONE] -->
    <string name="pref_default_currency_key" translatable="false">default_currency</string>

    <!-- Value in SharedPreferences for default currency option [CHAR LIMIT=NONE] -->
    <string name="pref_CAD_currency" translatable="false">CAD</string>
    <string name="pref_USD_currency" translatable="false">USD</string>
    <string name="pref_EUR_currency" translatable="false">EUR</string>

    <string name="title_account_editor">Account Editor</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_contributor_editor">Contributor Editor</string>
    <string name="title_payment_method_editor">Payment Method Editor</string>
    <string name="title_category_editor">Category Editor</string>

    <string name="validation_currency_mandatory">Currency is mandatory</string>
    <string name="validation_name_already_exists">Name already exists</string>
    <string name="validation_name_mandatory">Name is mandatory</string>
    <string name="validation_exchange_rate_mandatory">Exchange rate must be greater than 0</string>
    <string name="validation_group_mandatory">Group is mandatory</string>
    <string name="validation_contributors_mandatory">No contributor selected</string>
    <string name="validation_categories_mandatory">No category selected</string>



    <string name="error_unable_to_fetch_all_contributor">Unable to fetch all contributor.</string>
    <string name="error_unable_to_fetch_all_category">Unable to fetch all category.</string>

    <string name="category_group_car">Car</string>
    <string name="category_group_home">Home</string>
    <string name="category_group_personal">Personal</string>
    <string name="category_group_vacation">Vacation</string>

    <string name="account_active">Account Active</string>
    <string name="account_close">Account Close</string>

</resources>
